--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "3.4.1",
