--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-CONNECTION_URL = mongodb+srv://harfat:12341234@cluster0.vxlqvgg.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://harhat18:12341234@cluster0.rcsrylh.mongodb.net/memo?retryWrites=true&w=majority
